:squirrel: Remove bloated css. Fix menu alignment for mobile.

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -6,7 +6,4 @@
 		width:100%;
 		padding-left: 10px;
 	}
-	.site-header {
-	  padding-right: 30px;
-	}
 }
